--- a/Love/res/layout/grid_item_album.xml
+++ b/Love/res/layout/grid_item_album.xml
@@ -1,95 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<cc.ccme.love.widget.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    <RelativeLayout
+    android:layout_height="match_parent" >
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_title_bar"
-        android:padding="@dimen/album_bar_padding"
-        >
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="@dimen/album_title_width"
-            android:layout_height="wrap_content" 
-            style="@style/AlbumName"
-            android:text="@string/testalbumname"/>
-        <ImageButton
-            android:id="@+id/btn_edit"
-            android:layout_toRightOf="@id/text_title"
-            android:layout_width="@dimen/album_button_size"
-            android:layout_height="@dimen/album_button_size"
-            android:layout_marginLeft="@dimen/album_btn_margin"
-            android:background="@drawable/btn_edit_selector"
-            android:visibility="invisible"
-            android:contentDescription="@string/app_name"/>
-        <TextView
-            android:id="@+id/text_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignBottom="@id/text_title"
-            style="@style/AlbumTag"
-            android:text="@string/album_tag_event"
-            />
-            
-    </RelativeLayout>
-	<ImageView
-	    android:layout_width="match_parent"
-	    android:layout_height="1dp"
-	    android:background="@drawable/list_divider"
-	    android:contentDescription="@string/app_name"/>
-	<RelativeLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    >
-        <ImageView
-            android:id="@+id/image_cover"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/album_item_size"
-            android:scaleType="centerCrop"
-            android:src="@drawable/bg_album"
-            android:contentDescription="@string/app_name"/>
-        <TextView
-            android:id="@+id/text_count"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:text="@string/testalbumcount"
-            style="@style/AlbumCount"/>
-        
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:padding="@dimen/album_privacy_padding"
-            >
-        <TextView
-            android:id="@+id/text_privacy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"            
-            android:text="@string/album_privacy_private"
-            style="@style/AlbumPrivacy"/>
-        
-        <ToggleButton
-            android:id="@+id/btn_privacy"
-            android:layout_width="@dimen/album_toggle_width"
-            android:layout_height="@dimen/album_toggle_height"
-            android:visibility="invisible"
-            style="@style/AlbumToggle" 
-            android:background="@drawable/toggle_privacy_selector"/>
-        </FrameLayout>
-        
-        <ImageButton
-            android:id="@+id/btn_delete"
-            android:layout_width="@dimen/album_button_size"
-            android:layout_height="@dimen/album_button_size"
-            android:background="@drawable/btn_delete_selector"
-            android:layout_alignParentRight="true"
-            android:layout_margin="@dimen/album_btn_delete_margin"
-            android:visibility="invisible"
-            android:contentDescription="@string/app_name"/>
-    </RelativeLayout>
-</LinearLayout>
+            android:background="@drawable/bg_title_bar"
+            android:padding="@dimen/album_bar_padding" >
+
+            <TextView
+                android:id="@+id/text_title"
+                style="@style/AlbumName"
+                android:layout_width="@dimen/album_title_width"
+                android:layout_height="wrap_content"
+                android:text="@string/testalbumname" />
+
+            <ImageButton
+                android:id="@+id/btn_edit"
+                android:layout_width="@dimen/album_button_size"
+                android:layout_height="@dimen/album_button_size"
+                android:layout_marginLeft="@dimen/album_btn_margin"
+                android:layout_toRightOf="@id/text_title"
+                android:background="@drawable/btn_edit_selector"
+                android:contentDescription="@string/app_name"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/text_tag"
+                style="@style/AlbumTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/text_title"
+                android:layout_alignParentRight="true"
+                android:text="@string/album_tag_event" />
+        </RelativeLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/list_divider"
+            android:contentDescription="@string/app_name" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ImageView
+                android:id="@+id/image_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bg_album" />
+
+            <TextView
+                android:id="@+id/text_count"
+                style="@style/AlbumCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:text="@string/testalbumcount" />
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:padding="@dimen/album_privacy_padding" >
+
+                <TextView
+                    android:id="@+id/text_privacy"
+                    style="@style/AlbumPrivacy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/album_privacy_private" />
+
+                <ToggleButton
+                    android:id="@+id/btn_privacy"
+                    style="@style/AlbumToggle"
+                    android:layout_width="@dimen/album_toggle_width"
+                    android:layout_height="@dimen/album_toggle_height"
+                    android:background="@drawable/toggle_privacy_selector"
+                    android:visibility="invisible" />
+            </FrameLayout>
+
+            <ImageButton
+                android:id="@+id/btn_delete"
+                android:layout_width="@dimen/album_button_size"
+                android:layout_height="@dimen/album_button_size"
+                android:layout_alignParentRight="true"
+                android:layout_margin="@dimen/album_btn_delete_margin"
+                android:background="@drawable/btn_delete_selector"
+                android:contentDescription="@string/app_name"
+                android:visibility="invisible" />
+        </RelativeLayout>
+    </LinearLayout>
+
+</cc.ccme.love.widget.SquareLayout>
