git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1487 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/layout/activity_video_image_pick.xml
+++ b/Love/res/layout/activity_video_image_pick.xml
@@ -3,38 +3,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/BackBaseColor"
-    tools:context=".EventActivity" >
-    <RelativeLayout
-        android:id="@+id/title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_title_bar"
-        android:padding="10dp" >
-
-        <ImageButton
-            android:id="@+id/btn_back"
-            android:layout_width="@dimen/btn_size"
-            android:layout_height="@dimen/btn_size"
-            android:background="@drawable/btn_back_selector"
-            android:contentDescription="@string/app_name" />
-
-        <ImageButton
-            android:id="@+id/btn_add"
-            android:layout_width="@dimen/btn_size"
-            android:layout_height="@dimen/btn_size"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/btn_add_selector"
-            android:contentDescription="@string/app_name" />
-
-        <TextView
-            android:id="@+id/title_text"
-            android:layout_width="wrap_content"
+    tools:context=".VideoImagePickActivity" >
+	<RelativeLayout
+            android:id="@+id/title_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            style="@style/TitleText"
-            android:text="@string/event_title" />
-    </RelativeLayout>
-    <TabHost
+            android:background="@drawable/bg_title_bar"
+            android:padding="10dp" >
+
+            <ImageButton
+                android:id="@+id/btn_back"
+                android:layout_width="@dimen/btn_size"
+                android:layout_height="@dimen/btn_size"
+                android:background="@drawable/btn_back_selector"
+                android:contentDescription="@string/app_name" />
+
+            <ImageButton
+                android:id="@+id/btn_ok"
+                android:layout_width="@dimen/btn_size"
+                android:layout_height="@dimen/btn_size"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/btn_ok_selector"
+                android:contentDescription="@string/app_name" />
+
+            <TextView
+                android:id="@+id/title_text"
+                style="@style/TitleText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/video_title" />
+        </RelativeLayout>
+
+	<TabHost
         android:id="@android:id/tabhost"
         android:layout_below="@id/title_bar"
         android:layout_width="match_parent"
@@ -63,13 +64,13 @@
                 android:layout_height="match_parent" >
  
                 <fragment
-                    android:id="@+id/event_organized"
-                    android:name="cc.ccme.love.event.EventOrganizedFragment"
+                    android:id="@+id/album_love"
+                    android:name="cc.ccme.love.event.BaseEventFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
                 <fragment
-                    android:id="@+id/event_invited"
+                    android:id="@+id/album_local"
                     android:name="cc.ccme.love.event.EventInvitedFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
