git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1493 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/layout/activity_video_image_pick.xml
+++ b/Love/res/layout/activity_video_image_pick.xml
@@ -65,13 +65,13 @@
  
                 <fragment
                     android:id="@+id/album_love"
-                    android:name="cc.ccme.love.event.BaseEventFragment"
+                    android:name="cc.ccme.love.video.LoveAlbumPickFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
                 <fragment
                     android:id="@+id/album_local"
-                    android:name="cc.ccme.love.event.EventInvitedFragment"
+                    android:name="cc.ccme.love.video.LocalAlbumPickFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
