--- a/Love/res/values/styles.xml
+++ b/Love/res/values/styles.xml
@@ -507,4 +507,10 @@
         <item name="android:paddingLeft">10dp</item>
         <item name="android:background">@drawable/bg_title_bar</item>
     </style>
+    <style name="VideoAlbumItemTitle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">left|center_vertical</item>
+        <item name="android:textColor">@drawable/color_common_text_selector</item>
+        <item name="android:drawableRight">@drawable/ic_item_go_selector</item>
+    </style>
 </resources>
