--- a/Love/res/values/dimens.xml
+++ b/Love/res/values/dimens.xml
@@ -144,4 +144,5 @@
 	<dimen name="video_item_size">90dp</dimen>
 	<dimen name="video_btn_delete_size">10dp</dimen>
 	<dimen name="video_image_margin">5dp</dimen>
+	<dimen name="video_cover_size">80dp</dimen>
 </resources>
