--- a/Love/res/layout/list_item_video_album_pick_local.xml
+++ b/Love/res/layout/list_item_video_album_pick_local.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/video_cover_size"
+    android:layout_height="wrap_content"
     android:background="@drawable/bg_item_selector"
     >
     <ImageView
@@ -14,12 +14,15 @@
     <TextView
         android:id="@+id/title"
         android:layout_toRightOf="@id/image"
-        android:layout_margin="20dp"
+        android:padding="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/video_cover_size"
+        android:layout_alignBottom="@id/image"
         android:layout_centerVertical="true"
         style="@style/VideoAlbumItemTitle"
         android:text="@string/testalbumname"
         />
 
 </RelativeLayout>
+
+ 
