--- a/Love/res/values/dimens.xml
+++ b/Love/res/values/dimens.xml
@@ -145,4 +145,21 @@
 	<dimen name="video_btn_delete_size">10dp</dimen>
 	<dimen name="video_image_margin">5dp</dimen>
 	<dimen name="video_cover_size">80dp</dimen>
+	
+	<!-- Values for congrate -->
+	<dimen name="congrate_item_size">150dp</dimen>
+	<dimen name="congrate_avatar_size">35dp</dimen>
+	<dimen name="congrate_margin">5dp</dimen>
+	<dimen name="congrate_margin_top">20dp</dimen>
+	<dimen name="congrate_edit_margin_top">20dp</dimen>
+	<dimen name="congrate_button_size">18dp</dimen>
+	<dimen name="congrate_dialog_margin">0dp</dimen>
+	<dimen name="congrate_dialog_height">200dp</dimen>
+	<dimen name="congrate_dialog_scroll_height">100dp</dimen>
+	<dimen name="congrate_edit_height">200dp</dimen>
+	<dimen name="congrate_edit_avatar_size">50dp</dimen>
+	<dimen name="congrate_edit_width">200dp</dimen>
+	<dimen name="congrate_edit_selector_margin">30dp</dimen>
+	<dimen name="congrate_edit_item_width">87dp</dimen>
+	<dimen name="congrate_edit_item_height">60dp</dimen>
 </resources>
