git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1548 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/values/dimens.xml
+++ b/Love/res/values/dimens.xml
@@ -162,4 +162,9 @@
 	<dimen name="congrate_edit_selector_margin">30dp</dimen>
 	<dimen name="congrate_edit_item_width">87dp</dimen>
 	<dimen name="congrate_edit_item_height">60dp</dimen>
+	
+	<!-- Values for settings -->
+	<dimen name="settings_item_height">45dp</dimen>
+	<dimen name="settings_margin">15dp</dimen>
+	<dimen name="settings_margin_left">20dp</dimen>
 </resources>
